<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Author Follow</string>
    <string name="books_data_loaded">Books data loaded successfully</string>
    <string name="book_detail">Book detail</string>
    <string name="Description">Description</string>
    <string name="a11y_book_title">Title: <xliff:g id="book">%1$s</xliff:g></string>
    <string name="a11y_book_overview">Overview: <xliff:g id="overview">%1$s</xliff:g></string>
    <string name="a11y_book_author">Author of book: <xliff:g id="year">%1$s</xliff:g></string>
    <string name="a11y_book_year">Date of release: <xliff:g id="year">%1$s</xliff:g></string>
    <string name="a11y_book_rate">Rating: <xliff:g id="rate">%1$s</xliff:g></string>
    <string name="no_internet_connection">No network connection available.</string>
    <string name="trailer">Trailer</string>
    <string name="add_authors">Follow authors to view upcoming releases</string>
    <string name="action_settings">Settings</string>
    <string name="sample_email">email@email.com</string>
    <string name="sample_name">sample_name</string>
    <string name="title_book_detail">Book Details</string>
    <string name="PublishedOn">Published On</string>
    <string name="ISBN">ISBN</string>
    <string name="find_out_more">Find out more at </string>
    <string name="not_rated">Not Rated</string>
    <string name="similar">Similar books</string>
    <string name="upcoming">Upcoming</string>
    <string name="wishlist">Wishlist</string>
    <string name="remove_from_wishlist_title">Remove from wishlist?</string>
    <string name="book_added_to_wishlist">Book added to wishlist successfully</string>
    <string name="search_in_wishlist">Search in wishlist ...</string>
    <string name="search_in_upcoming">Search in upcoming books</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="wishlist_remove_confirm_title">Wishlist</string>
    <string name="wishlist_remove_confirm_msg">Do you really want to remove this book from the wishlist?</string>
    <string name="confirmation_yes">Confirm</string>
    <string name="confirmation_cancel">Cancel</string>
    <string name="book_removed_from_wishlist">Book removed from wishlist</string>
    <string name="author_title">Author</string>
    <string name="nav_author">Authors</string>
    <string name="nav_books">Books</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_goodread">Goodreads</string>
    <string name="book_count_text_none">No upcoming books</string>
    <string name="book_count_text_single">book</string>
    <string name="book_count_text">books</string>
    <string name="author_search_hint">Search for new authors...</string>
    <string name="author_not_followed_yet">Add author to follow list</string>
    <string name="author_not_found">Author not found. Try searching with exact name.</string>
    <string name="author_added_to_wishlist">Author added to follow list successfully.</string>
    <string name="author_remove_confirm_title">Remove Author?</string>
    <string name="author_remove_confirm_msg">Do you really want to remove Author from follow list?</string>
    <string name="author_removed_from_wishlist">Author removed from the follow list</string>
    <string name="hometown">Hometown</string>
    <string name="upcoming_books">Upcoming Books</string>
    <string name="about_the_author">About the Author</string>
    <string name="not_available">Not Available</string>
    <string name="title_author_detail">Author</string>
    <string name="born_on">Born on</string>
    <string name="followers">followers</string>
    <string name="no_upcoming_books">No upcoming books found</string>
    <string name="desc_google_icon">Google logo</string>
    <string name="loading">Loading...</string>
    <string name="sign_out_message">Signed out of the app successfully!</string>
    <string name="search_for_new_authors">Search for new Authors</string>
    <string name="settings_title">Settings</string>
    <string name="follow_sub_title">follow your favorite authors !</string>
    <string name="signout_title">SignOut</string>
    <string name="action_share">share with</string>
    <string name="no_description_available">No description available</string>
    <string name="add_books">Add books to save them to your wishlist</string>
    <string name="a11y_splash_img">Splash image</string>
    <string name="a11y_signin_btn_desc">SignIn button</string>
    <string name="a11y_signedin_user_profile_img">Signed In user profile image</string>
    <string name="a11y_signedin_user_profile_name">Signed In User profile name : <xliff:g id="name">%1$s</xliff:g></string>
    <string name="a11y_signedin_user_profile_email">Signed In User profile email address : <xliff:g id="email">%1$s</xliff:g></string>
    <string name="a11y_similar_book">Similar book: <xliff:g id="book">%1$s</xliff:g></string>
    <string name="a11y_author_name">Author Name: <xliff:g id="author">%1$s</xliff:g></string>
    <string name="a11y_follow_status">Follow Status: <xliff:g id="status">%1$s</xliff:g></string>
    <string name="error_message_in_connection">Error in connecting. Verify system time or network connection</string>
    <string name="no_wishlist_books">Add books to wishlist for display here!</string>
</resources>
