<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_height"
    android:background="@drawable/default_bg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/drawer_img_size"
                android:layout_height="@dimen/drawer_img_size"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:contentDescription="@string/a11y_signedin_user_profile_img"
                app:border_color="@android:color/white"
                app:border_width="@dimen/drawer_img_border_width" />
        </FrameLayout>

        <TextView
            android:id="@+id/drawer_user_name"
            style="@style/DrawerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_name" />/>

        <TextView
            android:id="@+id/drawer_user_email"
            style="@style/ViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_email" />/>
    </LinearLayout>

</RelativeLayout>