<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/author_detail_hometown_title_text_view"
                    style="@style/InfoSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/hometown" />

                <TextView
                    android:id="@+id/author_detail_hometown_text_view"
                    style="@style/DetailSubContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Yate, England"></TextView>

                <TextView
                    android:id="@+id/author_detail_bday_title_text_view"
                    style="@style/InfoSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/born_on" />

                <TextView
                    android:id="@+id/author_detail_bday_text_view"
                    style="@style/DetailSubContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="31 July, 1965"></TextView>

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/author_list_left_margin"
                android:layout_weight="2"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/author_detail_poster_image_view"
                    android:layout_width="@dimen/author_img_avatar_size"
                    android:layout_height="@dimen/author_img_avatar_size"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/image_border"
                    android:fitsSystemWindows="true"
                    android:transitionName="authorPosterImageView"
                    tools:src="@drawable/author_placeholder" />

                <TextView
                    android:id="@+id/author_detail_fan_count_text_view"
                    style="@style/InfoSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:text="161.4" />

                <TextView
                    android:id="@+id/author_detail_follower_title_text_view"
                    style="@style/SubTextContent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    tools:text="Followers" />


            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/view_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_margin"
            android:orientation="vertical">

            <TextView
                style="@style/InfoSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/spacing_small"
                android:text="@string/upcoming_books" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:theme="@style/IndetProgressBar"
                android:visibility="gone" />

            <TextView
                android:id="@+id/no_upcoming_books_found_text_view"
                style="@style/DetailSubContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_upcoming_books"
                android:visibility="gone"></TextView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_similar_books_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/similar_books_height" />
        </LinearLayout>

        <include layout="@layout/view_divider" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/author_detail_synopsys_title_text_view"
                    style="@style/DetailContainerSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about_the_author" />

                <TextView
                    android:id="@+id/author_detail_about_data_text_view"
                    style="@style/BookDetailContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Test" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_card_view"
            style="@style/DetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailContainerSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/rate_icon_margin_right"
                    android:paddingEnd="@dimen/rate_icon_margin_right"
                    android:text="@string/find_out_more" />

                <ImageView
                    android:id="@+id/gr_icon_image_view"
                    android:layout_width="@dimen/play_icon_size"
                    android:layout_height="@dimen/play_icon_size"
                    android:paddingStart="@dimen/rate_icon_margin_right"
                    android:paddingEnd="@dimen/rate_icon_margin_right"
                    android:src="@drawable/goodreads_icon" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
