<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/movie_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_detail_poster_image_view"
                android:layout_width="@dimen/detail_poster_image_width"
                android:layout_height="@dimen/detail_poster_image_height"
                android:layout_gravity="left|bottom"
                android:layout_marginBottom="@dimen/detail_poster_image_margin_bottom"
                android:layout_marginLeft="@dimen/detail_poster_image_margin_left"
                android:layout_marginStart="@dimen/detail_poster_image_margin_left"
                android:background="@drawable/image_border"
                android:fitsSystemWindows="true"
                android:transitionName="posterImageView"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/ic_movie_placeholder" />

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_detail_rate_value_text_view"
                    style="@style/MovieDetailContainerSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="4.4" />

                <RatingBar
                    android:id="@+id/movie_detail_rating_value_view"
                    android:rating="4.4"
                    android:numStars="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:layout_gravity="center"
                    android:theme="@style/RatingBar"/>

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_detail_published_title_text_view"
                    style="@style/MovieDetailContainerSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PublishedOn" />

                <TextView
                    android:id="@+id/movie_detail_year_text_view"
                    style="@style/MovieDetailContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2015"></TextView>

                <TextView
                    android:id="@+id/movie_detail_isbn_title_text_view"
                    style="@style/MovieDetailContainerSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ISBN" />

                <TextView
                    android:id="@+id/book_detail_isbn_text_view"
                    style="@style/MovieDetailContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ABCDEFD2015"></TextView>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_detail_synopsys_title_text_view"
                    style="@style/MovieDetailContainerSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Description" />

                <TextView
                    android:id="@+id/movie_detail_synopsys_data_text_view"
                    style="@style/MovieDetailContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Test" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_movie_trailers_card_view"
            style="@style/MovieDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MovieDetailContainerSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/rate_icon_margin_right"
                    android:paddingRight="@dimen/rate_icon_margin_right"
                    android:text="@string/find_out_more" />

                <ImageView
                    android:id="@+id/amazon_icon_image_view"
                    android:layout_width="@dimen/play_icon_size"
                    android:layout_height="@dimen/play_icon_size"
                    android:paddingLeft="@dimen/rate_icon_margin_right"
                    android:paddingRight="@dimen/rate_icon_margin_right"
                    android:src="@drawable/amazon_icon" />

                <ImageView
                    android:id="@+id/gr_icon_image_view"
                    android:layout_width="@dimen/play_icon_size"
                    android:layout_height="@dimen/play_icon_size"
                    android:paddingLeft="@dimen/rate_icon_margin_right"
                    android:paddingRight="@dimen/rate_icon_margin_right"
                    android:src="@drawable/goodreads_icon" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
